# mxflutter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mxflutter_js_src  pubspec.yaml
mxflutter/android/: .project  CMakeLists.txt  build.gradle  config.gradle  proguard-rules.pro  settings.gradle
mxflutter/android/src/main/: AndroidManifest.xml
mxflutter/android/src/main/cpp/include/: MXFFICallbackManager.h  jni_helper.h  mxflutter_app.h  mxflutter_ffi.h
mxflutter/android/src/main/cpp/sdk/: CMakeLists.txt  MXFFICallbackManager.cpp  jni_helper.cpp  mxflutter_app.cpp  mxflutter_ffi.cpp
mxflutter/android/src/main/java/com/eclipsesource/v8/: Platform.java  SignatureProvider.java  V8ScriptException.java
mxflutter/android/src/main/java/com/eclipsesource/v8/debug/: CompileEvent.java  ScriptBreakPoint.java
mxflutter/android/src/main/java/com/eclipsesource/v8/utils/: MemoryManager.java  V8ObjectUtils.java  V8Runnable.java
mxflutter/android/src/main/java/com/mojitox/mxflutter/: MXFlutterPlugin.java  MxflutterPlugin.java
mxflutter/android/src/main/java/com/mojitox/mxflutter/framework/: JSModule.java  JsEngine.java  JsExecutor.java  JsFlutterApp.java  JsFlutterEngine.java  MXFlutterActivity.java  MXFlutterApplication.java  MXJSEngine.java  MXJSExecutor.java  (+2 more)
mxflutter/android/src/main/java/com/tmax/mxflutter/: MxflutterPlugin.java
mxflutter/android/src/main/v8/com/debug/: Debugger.kt  MXDebug.kt  Mappers.kt  Protocol.kt  Runtime.kt  ScriptProviderImp.kt  ScriptSourceProvider.kt  StethoHelper.kt  V8Messenger.kt
mxflutter/android/src/main/v8/com/eclipsesource/v8/: JavaCallback.java  JavaVoidCallback.java  LibraryLoader.java  NodeJS.java  PlatformDetector.java  ReferenceHandler.java  Releasable.java  V8.java  V8Array.java  V8ArrayBuffer.java  V8Function.java  V8Locker.java  V8Object.java  V8ResultUndefined.java  V8RuntimeException.java  V8ScriptCompilationException.java  V8ScriptExecutionException.java  V8TypedArray.java  V8Value.java
(+828 files in other folders)
